--- a/Week3/app/src/main/AndroidManifest.xml
+++ b/Week3/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.homefan">
+    package="com.JTKODE.ikbal_alghifary_week3">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HomeFan">
+        android:theme="@style/Theme.JTKODE">
         <activity
-            android:name=".MainActivity"
+            android:name="com.JTKODE.ikbal_alghifary_week3.Detail"
+            android:exported="false" />
+        <activity
+            android:name="com.JTKODE.ikbal_alghifary_week3.EditData"
+            android:exported="false" />
+        <activity
+            android:name="com.JTKODE.ikbal_alghifary_week3.ViewData"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.JTKODE.ikbal_alghifary_week3.MainActivity2"
+            android:exported="true" />
+        <activity
+            android:name="com.JTKODE.ikbal_alghifary_week3.MainActivity"
+            android:exported="true" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
