--- a/Week3/settings.gradle
+++ b/Week3/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "HomeFan"
+rootProject.name = "Soal_2"
 include ':app'
